# curriculum_learning

./: .gitignore  .pylintrc  README.md  Singularity  Singularity.def  SingularityTest.def  pyproject.toml  requirements.txt  setup.sh  start.sh
CNN/: evalPySC2.cmd  parseLogs.py  run.py  runPySC2.sh
CNN/agent/: SimpleModelLoader.py  agent.py  non_spatial_setup.py  policy.py  runner.py
CNN/common/: dump_weights.py  get_model_info.py  multienv.py  preprocess.py  util.py
CNN/logs/: pysc2_2018-03-23_1729.csv
CNN/util/: dump_weights.py  epochplotter.py  get_model_info.py  mergelogs.py
CustomMaps/: mini_games.py  new2_CollectMineralShards.SC2Map  new2_CollectMineralsAndGas.SC2Map  new2_DefeatRoaches.SC2Map  new2_FindAndDefeatZerglings.SC2Map  new2_MoveToBeacon.SC2Map  new3_CollectMineralShards.SC2Map  new_CollectMineralShards.SC2Map  new_CollectMineralShards15x9.SC2Map  new_CollectMineralsAndGas.SC2Map  new_CollectMineralsAndGas15x9.SC2Map  new_DefeatRoaches.SC2Map  new_FindAndDefeatZerglings.SC2Map  new_MoveToBeaconSmaller.SC2Map
DeepQ/: DeepQ.sln
DeepQ/DeepQ/: DeepQ.py  DeepQ.pyproj  analyze.py  loss.txt  score.txt
DeepQ/DeepQ/model/: agent_model.ckpt.data-00000-of-00001  checkpoint  (+1 more)
agent_code/: attack_agent.py  base_agent.py  default_agent.py
report/: acknowledge.tex  appendix.tex  config.tex  fyp.tex  prelude.tex  refs.bib  summary.tex
report/Chapters/: conclusion.tex  evaluation.tex  evaluation_method.tex  implem.tex  intro.tex  method.tex  research.tex
scoping_and_planning/: Leeds_BLACK.eps  biblio.bib  config.tex  frontmatter.tex  main.tex
